# Onvif-IP-Camera-Mock

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
readme-assets/: sample.mov
src/: circle.rs  ffmpeg.rs  main.rs  onvif.rs  render.rs
