[package]
name = "onvif-ip-camera-mock"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["json"] }